SameSite: Teach devtools about the new 'samesite' syntax.

We used to treat 'samesite' as a binary flag, displaying a checkmark
just like 'secure' or 'httponly'. The attribute is now a trinary value in
the table: "", "Lax", or "Strict".

The protocol shifted to align with this change, switching from a boolean
value to an enum ("NoRestriction", "Lax", and "Strict", respectively).

BUG=596520

Review URL: https://codereview.chromium.org/1827743002

Cr-Original-Commit-Position: refs/heads/master@{#385393}
Cr-Mirrored-From: https://chromium.googlesource.com/chromium/src
Cr-Mirrored-Commit: 4e0bddf6d2123979b95860fae65429014828b33f